# helixml

./: .gitignore  ARCHITECTURE_REVIEW.md  CHANGELOG.md  COMPLETION_STATUS.md  COMPREHENSIVE_GUIDE.md  CONTRIBUTING.md  CRITICAL_FIXES_SUMMARY.md  Cargo.toml  FINAL_PROJECT_STATUS.md  FINAL_STATUS.md  HELIX_CAPABILITIES.md  LICENSE  PROJECT_ANALYSIS.md  PROJECT_CLEANUP_LIST.md  PROJECT_ISSUES_REPORT.md  QUICKSTART.md  README.md  RESTORATION_SUCCESS.md  SYNTHETIC_DATA_FINAL.md  SYNTHETIC_DATA_PROGRESS.md  SYNTHETIC_DATA_SESSION_COMPLETE.md  TEST_RESULTS.md  clippy.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: bashrc
.github/: dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  cuda.yml  docs.yml  release.yml
benches/: Cargo.toml
benches/src/: neural_networks.rs  tensor_operations.rs
configs/: meanings.toml
crates/adaptive-scheduler/: CAREFUL_REWRITE_NEEDED.md  Cargo.toml
crates/adaptive-scheduler/src/: device_manager.rs  lib.rs  load_balancer.rs  metrics.rs  optimization.rs  policies.rs  resource_monitor.rs  scheduler.rs  task_queue.rs  utils.rs
crates/autograd/: Cargo.toml
crates/autograd/src/: advanced.rs  backward.rs  gradients.rs  lib.rs  memory.rs  operations.rs  optimization.rs  optimizer.rs
crates/backend-cpu/: Cargo.toml
crates/backend-cpu/src/: blas_ops.rs  cpu_backend.rs  lib.rs  memory_pool.rs  simd_ops.rs
crates/backend-cpu/tests/: integration_tests.rs
crates/backend-cuda/: Cargo.toml  build.rs
crates/backend-cuda/src/: cuda_backend.rs  cuda_kernels.rs  fused_ops.rs  kernels.cu  kernels.ptx  kernels.rs  lib.rs  memory_manager.rs  ops_impl.rs  tensor_impl.rs  traits_impl.rs
crates/data-pipeline/: Cargo.toml
crates/data-pipeline/src/: batcher.rs  cache.rs  dataset.rs  lib.rs  loader.rs  preprocessor.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: e8_symmetry.rs  lib.rs  mera.rs  twistor.rs
crates/hal/: Cargo.toml
crates/hal/src/: backend.rs  capabilities.rs  device.rs  error.rs  lib.rs  memory.rs  operations.rs  scheduler.rs
crates/hammer/: Cargo.toml
crates/hammer/src/: agent.rs  context.rs  energy.rs  fractal.rs  graph.rs  lib.rs  scheduler.rs  topology.rs  vortex.rs
crates/io/: Cargo.toml
crates/meanings/: Cargo.toml
crates/meanings/benches/: bootstrap_benchmarks.rs
crates/meanings/src/: lib.rs
crates/meanings/tests/: integration_tests.rs
crates/moe/: Cargo.toml
crates/multimodal/: Cargo.toml
crates/multimodal/src/: alignment.rs  data_types.rs  decoders.rs  encoders.rs  fusion.rs  lib.rs  pipelines.rs  processors.rs  transformers.rs  utils.rs
crates/nn/: Cargo.toml
crates/nn/src/: lib.rs  ssm.rs
crates/optim/: Cargo.toml
crates/optim/src/: lib.rs
crates/quant/: Cargo.toml
crates/rev/: Cargo.toml
crates/scheduling/: Cargo.toml
crates/scheduling/src/: lib.rs
crates/serve/: Cargo.toml
crates/serve/src/: lib.rs
crates/synthetic-data/: Cargo.toml
crates/synthetic-data/src/: benchmarks.rs  datasets.rs  generators.rs  lib.rs  utils.rs  validators.rs  verifiers.rs
crates/tensor-core/: Cargo.toml
crates/tensor-core/benches/: tensor_benchmarks.rs
crates/tensor-core/src/: device.rs  dtype.rs  error.rs  lib.rs  ops.rs  shape.rs  tensor.rs
crates/tensor-core/tests/: integration_tests.rs
crates/topo-memory/: Cargo.toml
crates/topo-memory/src/: cycles.rs  enhanced.rs  geometry.rs  lib.rs  links.rs  motifs.rs  phase_sync.rs  stability.rs  stable_cores.rs  uis_links.rs
crates/training/: Cargo.toml
crates/training/src/: checkpoint.rs  data_loader.rs  lib.rs  loss.rs  metrics.rs  monitor.rs  optimizer.rs  scheduler.rs  trainer.rs  validation.rs
crates/utils/: Cargo.toml
docker/: Dockerfile  Dockerfile.cuda
docs/: ARCH.md  MEANINGS.md
docs/book/: book.toml
docs/book/src/: README.md  SUMMARY.md
docs/book/src/getting-started/: installation.md
examples/adaptive_scheduler_example/: Cargo.toml
examples/adaptive_scheduler_example/src/: main.rs
examples/advanced_autograd_example/: Cargo.toml
examples/advanced_autograd_example/src/: main.rs
examples/advanced_example/: Cargo.toml
examples/advanced_example/src/: main.rs
examples/broadcasting_example/: Cargo.toml
examples/broadcasting_example/src/: main.rs
examples/checkpointing_example/: Cargo.toml
examples/checkpointing_example/src/: main.rs
examples/complete_autograd_example/: Cargo.toml
examples/complete_autograd_example/src/: main.rs
examples/cuda_backend_example/: Cargo.toml
examples/cuda_backend_example/src/: main.rs
examples/cuda_example/: Cargo.toml
examples/cuda_example/src/: main.rs
examples/enhanced_topo_memory_example/: Cargo.toml
examples/enhanced_topo_memory_example/src/: main.rs
examples/experimental_model/: Cargo.toml
examples/experimental_model/src/: main.rs
examples/hammer_example/: Cargo.toml
examples/hammer_example/src/: main.rs
examples/hyena_example/: Cargo.toml
examples/hyena_example/src/: main.rs
examples/hyena_span_infilling/: Cargo.toml
examples/minimal_example/: Cargo.toml
examples/minimal_example/src/: main.rs
examples/mixed_precision_example/: Cargo.toml
examples/mixed_precision_example/src/: main.rs
examples/multimodal_example/: Cargo.toml
examples/multimodal_example/src/: main.rs
examples/simple_example/: Cargo.toml
examples/simple_example/src/: main.rs
examples/ssm_byte_lm/: Cargo.toml
examples/ssm_byte_lm/src/: main.rs
examples/ssm_example/: Cargo.toml
examples/ssm_example/src/: main.rs
examples/synthetic_data_example/: Cargo.toml
examples/synthetic_data_example/src/: main.rs
examples/topo_memory_example/: Cargo.toml
examples/topo_memory_example/src/: main.rs
examples/training_example/: Cargo.toml
examples/training_example/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
src/: lib.rs
test_helix_project/: Cargo.toml
