[workspace]
resolver = "2"
members = [
    "lib",
    "crates/hal",
    "crates/tensor-core",
    "crates/backend-cpu", 
        "crates/backend-cuda",
        "crates/autograd",
        "crates/hammer",
        "crates/nn",
        "crates/data-pipeline",
    "crates/optim",
    "crates/training",
    "crates/topo-memory",
           "crates/synthetic-data",
           "crates/multimodal",
           "crates/adaptive-scheduler",
           "crates/meanings",
    "crates/geometry",
    "crates/scheduling",
    "crates/serve",
    "examples/minimal_example",
    "examples/simple_example",
    "examples/ssm_example",
    "examples/topo_memory_example",
    "examples/advanced_example",
    "examples/hyena_example",
    "examples/broadcasting_example",
    "examples/checkpointing_example",
    "examples/experimental_model",
    "examples/hyena_span_infilling",
        "examples/mixed_precision_example",
        "examples/ssm_byte_lm",
        "examples/cuda_example",
        "examples/advanced_autograd_example",
           "examples/synthetic_data_example",
           "examples/multimodal_example",
           "examples/adaptive_scheduler_example",
           "examples/hammer_example",
           "benches"
, "test_helix_project"]


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alex B <alex@helix-ml.dev>"]
license = "MIT"
repository = "https://github.com/helix-ml/helix-ml"
description = "🌀 HelixML: High-performance ML framework for SSM/Hyena with topological memory"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math & tensors
ndarray = "0.15"
num-traits = "0.2"
num-complex = "0.4"

# Async & networking
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tonic = "0.10"
tower = "0.4"

# Data processing
polars = { version = "0.40", features = ["lazy", "parquet"] }
arrow = "50.0"

# Performance
rayon = "1.8"
criterion = "0.5"

# Random
rand = "0.8"
rand_distr = "0.4"

# Logging
tracing = "0.1"


# CUDA
cudarc = "0.9"
cublas-sys = "0.1"

# Quantization
half = "2.3"

# Testing
proptest = { version = "1.4" }

# Hardware detection
num_cpus = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
