[package]
name = "helix_ml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "🌀 HelixML: High-performance ML framework for SSM/Hyena with topological memory"

[dependencies]
tensor-core = { path = "../crates/tensor-core" }
backend-cpu = { path = "../crates/backend-cpu" }
autograd = { path = "../crates/autograd" }
nn = { path = "../crates/nn" }
optim = { path = "../crates/optim" }
data = { path = "../crates/data" }
io = { path = "../crates/io" }
moe = { path = "../crates/moe" }
quant = { path = "../crates/quant" }
rev = { path = "../crates/rev" }
serve = { path = "../crates/serve" }
topo-memory = { path = "../crates/topo-memory" }
geometry = { path = "../crates/geometry" }
scheduling = { path = "../crates/scheduling" }
utils = { path = "../crates/utils" }

# Workspace dependencies
serde = { workspace = true }
