[package]
name = "helix_ml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "🌀 HelixML: High-performance ML framework for SSM/Hyena with topological memory"

[dependencies]
tensor-core = { path = "../crates/tensor-core" }
backend-cpu = { path = "../crates/backend-cpu" }
autograd = { path = "../crates/autograd" }
nn = { path = "../crates/nn" }
optim = { path = "../crates/optim" }
serve = { path = "../crates/serve" }
topo-memory = { path = "../crates/topo-memory" }
meanings = { path = "../crates/meanings" }
geometry = { path = "../crates/geometry" }
scheduling = { path = "../crates/scheduling" }

# Workspace dependencies
serde = { workspace = true }
