[package]
name = "backend-cpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tensor-core = { path = "../tensor-core" }
ndarray = { workspace = true, features = ["serde"] }
rayon = { workspace = true }
rand = "0.8"
rand_distr = "0.4"
serde = { workspace = true }
