[package]
name = "backend-cpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tensor-core = { path = "../tensor-core" }
hal = { path = "../hal" }
ndarray = { workspace = true, features = ["serde"] }
rayon = { workspace = true }
rand = "0.8"
rand_distr = "0.5"
serde = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
