[package]
name = "backend-cuda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tensor-core = { path = "../tensor-core" }
hal = { path = "../hal" }
serde = { workspace = true }
thiserror = { workspace = true }
cudarc = { version = "0.17", optional = true }
cublas-sys = { version = "0.1", optional = true }

[build-dependencies]
cc = { version = "1.0", optional = true }

[features]
default = []
cuda = ["dep:cudarc", "dep:cublas-sys", "dep:cc"]
