[package]
name = "data-pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Data pipeline for HelixML with efficient data loading and preprocessing"

[dependencies]
tensor-core = { path = "../tensor-core" }
backend-cpu = { path = "../backend-cpu" }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1.0"
rand = "0.9"
uuid = { version = "1.0", features = ["v4"] }
