[package]
name = "hammer"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor-core = { path = "../tensor-core" }
backend-cpu = { path = "../backend-cpu" }
autograd = { path = "../autograd" }
hal = { path = "../hal" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

