[package]
name = "multimodal"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor-core = { path = "../tensor-core" }
backend-cpu = { path = "../backend-cpu" }
backend-cuda = { path = "../backend-cuda" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
image = "0.24"
ffmpeg-next = "6.0"
hound = "3.5"
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
log = "0.4"

[features]
default = ["cpu"]
cpu = []
cuda = ["backend-cuda"]
audio = ["ffmpeg-next", "hound"]
video = ["ffmpeg-next"]
image = ["image"]
pointcloud = []

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
