[package]
name = "nn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tensor-core = { path = "../tensor-core" }
backend-cpu = { path = "../backend-cpu" }
autograd = { path = "../autograd" }
serde = { workspace = true }
