[package]
name = "adaptive_scheduler_example"
version = "0.1.0"
edition = "2021"
authors = ["HelixML Team"]
description = "Example usage of adaptive scheduler for multi-device orchestration"

[dependencies]
adaptive-scheduler = { path = "../../crates/adaptive-scheduler" }
tensor-core = { path = "../../crates/tensor-core" }
backend-cpu = { path = "../../crates/backend-cpu" }
backend-cuda = { path = "../../crates/backend-cuda" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
