[package]
name = "experimental_model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "🌀 Experimental model combining all HelixML components"

[dependencies]
helix_ml = { path = "../../lib" }
scheduling = { path = "../../crates/scheduling" }
anyhow = { workspace = true }
